# ApexLegends_liveapiAnalytics

./: .gitignore  README.md  aggregateTeamkills.py  apex_liveapiAnalytics.py  charactersAnalysis.py  csvFormatt.py  jsonCutter.py  killndamageAnalysis.py  main.py  makePlayerStats.py  makeResult.py  matchAggregate.py  pyproject.toml  simple_legendpick_analytics.py
